# trycycle

./: .gitignore  .trycycle-explorer.toml  AGENTS.md  README.md  SKILL.md  check-update.sh  pyproject.toml
agents/: openai.yaml
deepcycle/: cli.py
deepcycle/attack/: attack_runner.py  attacks.py
deepcycle/augmentations/: __init__.py  builder.py
deepcycle/commands/: attack.py  data_prepare.py  deploy.py  eval_cmd.py  report.py  research.py  train.py
docs/: trycycle-information-flow.dot
hooks/: pre-commit-verify.sh  scope-guard.sh  stop-verify.sh  test-integrity.sh
maintenance/: import-skills.sh  prompt-template.txt
orchestrator/: later_work.py  review_observations.py  run_phase.py  subagent_runner.py
prompts/: executing.md  plan-review.md  planning.md  post-impl-review.md
scripts/: import-skills.sh  prompt-template.txt
subagents/: prompt-executing.md  prompt-nonconvergence-review.md  prompt-plan-review.md  prompt-planning-edit-deepen.md  prompt-planning-edit.md  prompt-planning-initial.md  prompt-planning-reconsider.md  prompt-planning-review-deepen.md  prompt-planning-review.md  prompt-planning-synthesis.md  prompt-planning.md  prompt-post-impl-review-deepen.md  prompt-post-impl-review.md  prompt-test-plan.md  prompt-test-strategy.md  prompt-user-intent.md
tests/: test_later_work.py  test_review_observations.py  test_run_phase.py  test_skill_md_pi_only.py  test_subagent_runner.py  test_user_request_transcript_build.py  test_validate_rendered_prompt.py
trycycle_explorer/: README.md  cli.py  explorer.toml  extract.py  model.py  simulate.py  site.py
(+71 files in other folders)
